# driveicon

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
driveicon/: __main__.py  main.py  mountmenu.py  trayicon.py
driveicon/wrappers/: __init__.py  _async.py  bitset.py  menuattributeiter.py  varianttype.py
