[tool.poetry]
name = "fm"
version = "0.1.0"
description = ""
authors = ["Chen Zhenge <me@markle.one>"]

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.42.2"
gbulb = "^0.6.3"
asyncio-glib = "^0.1"
dasbus = "^1.7"
indexed = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
