[tool.poetry]
name = "driveicon"
version = "0.1.0"
description = ""
authors = ["Chen Zhenge <me@markle.one>"]

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.42.2"
gbulb = "^0.6.3"
dasbus = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
driveicon = "driveicon:main"
